# irma-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.bib  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Dockerfile.builder  README.md  TRIMMER.md  VERSION_MATRIX.md  install.sh
.cargo/: config.toml
.github/scripts/: check_versions_changelog.pl  last_release_notes.pl
.github/workflows/: builder.yml  ci.yml  docs.yml  release.yml
crates/irma-core-cli/: Cargo.toml  main.rs
crates/irma-core-cli/args/: clipping.rs
crates/irma-core-cli/processes/: mod.rs
crates/irma-core-cli/processes/integrated/: merge_sam_pairs.rs  num_procs.rs  phase.rs  xflate.rs
crates/irma-core-cli/processes/integrated/preprocess/: mod.rs  stats.rs
crates/irma-core-cli/processes/shared/: mod.rs  trimming.rs
crates/irma-core-cli/processes/standalone/: mod.rs  sampler.rs  trimmer.rs  xleave.rs
crates/irma-core-cli/processes/standalone/aligner/: arg_parsing.rs  mod.rs  tallies.rs  writers.rs
crates/irma-records/: Cargo.toml  README.md  hashing.rs  lib.rs
crates/irma-records/fastq/: mod.rs  test.rs  transforms.rs
crates/irma-records/io/: fastx.rs  mod.rs  readers.rs  write_records.rs  writers.rs
crates/irma-records/io/open_options/: input_options.rs  output_options.rs
crates/irma-records/paired/: deinterleave.rs  header_error.rs  id_side.rs  mod.rs  test.rs  zip_reads.rs
crates/irma-records/sam/: aligned.rs  cigar.rs  merge_pairs.rs  mod.rs  paired_stats.rs  test.rs
docs/: ALIGNER.md  BUILDER-README.md  SAMPLER.md  TRIMMER.md  VERSION_MATRIX.md  XLEAVE.md
src/: fastq_converter.rs  lib.rs  main.rs
src/args/: clipping.rs  mod.rs
src/io/: fastx.rs  mod.rs  readers.rs  write_records.rs  writers.rs
src/io/open_options/: context.rs  input_options.rs  mod.rs  output_options.rs
src/processes/: fastq_converter.rs  merge_sam_pairs.rs  mod.rs  qc_trim_deflate.rs  trimmer.rs  xflate.rs
src/processes/integrated/: fastq_converter.rs  merge_sam_pairs.rs  mod.rs  num_procs.rs  phase.rs  preprocess.rs  qc_trim_deflate.rs  xflate.rs
src/processes/standalone/: mod.rs  sampler.rs  trimmer.rs  xleave.rs
src/processes/standalone/aligner/: arg_parsing.rs  mod.rs  writers.rs
src/processes/standalone/aligner/methods/: mod.rs  striped_sw_local.rs  striped_sw_local_3pass.rs  striped_sw_shared.rs  striped_sw_shared_3pass.rs
src/qc/: fastq.rs  fastq_metadata.rs  mod.rs  test.rs
src/utils/: io.rs  mod.rs  paired_reads.rs  trimming.rs  whichever.rs
