[package]
name = "irma-core"
version = "0.9.0-dev"
edition = "2024"
description = "A tool to aid virus sequencing and accelerating IRMA."
license = "Apache-2.0"
rust-version = "1.88"

authors = ["Samuel S. Shepard <sshepard@cdc.gov>"]
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
]
keywords = ["sequencing", "influenza", "trimming", "qc"]
repository = "https://github.com/CDCgov/irma-core"
homepage = "https://github.com/CDCgov/irma-core"
readme = "README.md"


[dependencies]
zoe = { git = "https://github.com/CDCgov/zoe.git", default-features = false, features = [
    "multiversion", "rand"
] }
clap = { version = "4", features = ["derive"] }
foldhash = "0.2"
num_cpus = "1"
flate2 = "1"
rand_xoshiro = "0.7"
rand = { version = "0.9", default-features = false, features = ["os_rng"] }
rayon = { version = "1" }

[features]
# An optional feature for disabling rayon parallelization in aligner
dev_no_rayon = []

[profile.dev]
opt-level = 1

[profile.release]
strip = true

[profile.prod]
inherits = "release"
codegen-units = 1
lto = "fat"
