[workspace]
members = ["crates/irma-core-cli", "crates/irma-records"]
resolver = "2"

[workspace.package]
version = "0.10.1-dev"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

authors = ["Samuel S. Shepard <sshepard@cdc.gov>"]
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
]
keywords = ["sequencing", "influenza", "trimming", "qc"]
repository = "https://github.com/CDCgov/irma-core"
homepage = "https://github.com/CDCgov/irma-core"
readme = "README.md"

[workspace.dependencies]
zoe = { version = "0.0.29", default-features = false, features = [
    "multiversion",
    "rand",
    "dev-max-score-for-type",
] }
foldhash = "0.2"
flate2 = "1"

[workspace.lints.rust]
stable_features = "allow"

[profile.dev]
opt-level = 1

[profile.release]
strip = true

[profile.prod]
inherits = "release"
codegen-units = 1
lto = "fat"
