[package]
name = "irma-records"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
path = "lib.rs"

[dependencies]
zoe = { workspace = true }
foldhash = { workspace = true }
flate2 = { workspace = true }

[lints]
workspace = true
